--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,7 +22,7 @@
             android:paddingRight="4dp">
 
 
-            <widget.PortraitView
+            <net.sjh.italker.common.widget.PortraitView
                 android:tint="@color/text_nav"
                 android:id="@+id/im_portrait"
                 android:layout_width="@dimen/len_40"
